this is the third change.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 					<h4>If I could be any animal, I would be elephant.</h4>
 			</div>
             <p>Meow! Meow! Meow!</p>
+            <p>Let test this to be sure. Does this actively change the file? next question would be how do I add a picture to a html file?</p>
 		  </body>
 		</html>
         
